--- a/templates/kitchen/cook_list.html
+++ b/templates/kitchen/cook_list.html
@@ -1,10 +1,32 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends "base.html" %}
+
 <head>
   <meta charset="UTF-8">
-  <title>$Title$</title>
+  <title>List of all cooks</title>
 </head>
 <body>
-$END$
+{% block content %}
+  {% if cook_list %}
+    <table class="table">
+      <tr>
+        <th>ID</th>
+        <th>Username</th>
+        <th>First name</th>
+        <th>Last name</th>
+        <th>Years of experience</th>
+      </tr>
+      {% for cook in cook_list %}
+      <tr>
+        <td>{{ cook.id }}</td>
+        <td><a href="#"></a>{{ cook.username }} {% if user == cook %} (Me){% endif %}</td>
+        <td>{{ cook.first_name }}</td>
+        <td>{{ cook.last_name }}</td>
+        <td>{{ cook.years_of_experience }}</td>
+      </tr>
+      {% endfor %}
+    </table>
+  {% else %}
+    <p>Now we don't have any cooks on our kitchen</p>
+  {% endif %}
+{% endblock %}
 </body>
-</html>
