--- a/templates/kitchen/cook_list.html
+++ b/templates/kitchen/cook_list.html
@@ -1,11 +1,7 @@
 {% extends "base.html" %}
 
-<head>
-  <meta charset="UTF-8">
-  <title>List of all cooks</title>
-</head>
-<body>
 {% block content %}
+  <h2>List of all cooks</h2>
   {% if cook_list %}
     <table class="table">
       <tr>
@@ -18,7 +14,7 @@
       {% for cook in cook_list %}
       <tr>
         <td>{{ cook.id }}</td>
-        <td><a href="#"></a>{{ cook.username }} {% if user == cook %} (Me){% endif %}</td>
+        <td><a href="{{ cook.get_absolute_url }}">{{ cook.username }} {% if user == cook %} (Me){% endif %}</a></td>
         <td>{{ cook.first_name }}</td>
         <td>{{ cook.last_name }}</td>
         <td>{{ cook.years_of_experience }}</td>
