--- a/templates/kitchen/dish_list.html
+++ b/templates/kitchen/dish_list.html
@@ -4,8 +4,8 @@
 <body>
   {% block content %}
     <h2>List of all dishes</h2>
-    {% if dish_list %}
-      {% for dish in dish_list %}
+    {% if dishes_list %}
+      {% for dish in dishes_list %}
         <ul>
           <li>({{ dish.id }}) <a href="#">{{ dish.name }}</a> </li>
           <li>Type: {{ dish.dish_type.name }}</li>
