add logic to sidebar and inside list and detail view pages Need to add logic to update/delete/login/logout buttons and implement paginations

--- a/templates/kitchen/dish_list.html
+++ b/templates/kitchen/dish_list.html
@@ -4,10 +4,15 @@
 <body>
   {% block content %}
     <h2>List of all dishes</h2>
-    {% if dishes_list %}
-      {% for dish in dishes_list %}
+    {% if dish_list %}
+      {% for dish in dish_list %}
         <ul>
-          <li>({{ dish.id }}) <a href="#">{{ dish.name }}</a> </li>
+          <li>
+            ({{ dish.id }})
+            <a href="{% url 'kitchen:dish-detail' pk=dish.id%}">
+              {{ dish.name }}
+            </a>
+          </li>
           <li>Type: {{ dish.dish_type.name }}</li>
           <li>Price: {{ dish.price }}</li>
         </ul>
