--- a/templates/kitchen/dish_type_list.html
+++ b/templates/kitchen/dish_type_list.html
@@ -7,7 +7,12 @@
     {% if dish_type_list %}
       {% for dish_type in dish_type_list %}
         <ul>
-          <li>({{ dish_type.id }}) <a href="#">{{ dish_type.name }}</a> </li>
+          <li>
+            ({{ dish_type.id }})
+            <a href="{% url 'kitchen:dish-types-detail' pk=dish_type.id %}">
+              {{ dish_type.name }}
+            </a>
+          </li>
           <li></li>
           <li></li>
         </ul>
