--- a/templates/kitchen/dish_detail.html
+++ b/templates/kitchen/dish_detail.html
@@ -4,10 +4,10 @@
   {% block content %}
     <h3>Detail information about {{ dish.name }}</h3>
   <h5><strong>Dish type:</strong> {{ dish.dish_type }}
-      <a href="#" class="btn btn-danger link-to-page float-right">
+      <a href="{% url 'kitchen:dish-delete' pk=dish.id %}" class="btn btn-danger link-to-page float-right">
         Delete
       </a>
-      <a href="#" class="btn btn-secondary link-to-page float-right">
+      <a href="{% url 'kitchen:dish-update' pk=dish.id %}" class="btn btn-secondary link-to-page float-right">
         Update
       </a>
     </h5>
