--- a/templates/includes/sidebar.html
+++ b/templates/includes/sidebar.html
@@ -9,7 +9,7 @@
 
   <li class="list-group-item"><a href="{% url 'kitchen:index' %}">Home</a></li>
   <li class="list-group-item"><a href="{% url 'kitchen:dish-type-list' %}">Dish types</a></li>
-  <li class="list-group-item"><a href="{% url 'kitchen:dishes-list' %}">Dishes</a></li>
+  <li class="list-group-item"><a href="{% url 'kitchen:dish-list' %}">Dishes</a></li>
   <li class="list-group-item"><a href="{% url 'kitchen:cook-list' %}">Cooks</a></li>
   <li class="list-group-item"><a href="{% url 'kitchen:ingredient-list' %}">Ingredients</a></li>
 </ul>
