add url patterns for create all models, add button 'Add' to all list templates

--- a/templates/kitchen/dish_type_list.html
+++ b/templates/kitchen/dish_type_list.html
@@ -3,7 +3,10 @@
 <!--Name of dish_type_list it is in video-->
 <body>
   {% block content %}
-    <h2>List of all dish types</h2>
+    <h2>
+      List of all dish types
+      <a href="{% url 'kitchen:dish-type-create' %}" class="btn btn-primary link-to-page float-right">Add</a>
+    </h2>
     {% if dish_type_list %}
       {% for dish_type in dish_type_list %}
         <ul>
