--- a/templates/kitchen/cook_list.html
+++ b/templates/kitchen/cook_list.html
@@ -1,7 +1,11 @@
 {% extends "base.html" %}
 
 {% block content %}
-  <h2>List of all cooks</h2>
+  <h2>
+    List of all cooks
+    <a href="{% url 'kitchen:cook-create' %}" class="btn btn-primary link-to-page float-right">Add</a>
+  </h2>
+
   {% if cook_list %}
     <table class="table">
       <tr>
