--- a/templates/includes/sidebar.html
+++ b/templates/includes/sidebar.html
@@ -1,7 +1,12 @@
 <ul class="sidebar-nav list-group">
   {% if user.is_authenticated %}
     <li class="list-group-item">User: <a href="{% url 'kitchen:cook-detail' pk=user.id %}">{{ user.get_username }}</a></li>
-    <li class="list-group-item"><a href="{% url 'logout'%}?next={{request.path}}">Logout</a></li>
+    <li class="list-group-item">
+      <form action="{% url 'logout' %}" method="post" class="btn">
+        {% csrf_token %}
+        <button type="submit">Logout</button>
+      </form>
+    </li>
   {% else %}
     <li class="list-group-item"><a href="{% url 'login'%}?next={{request.path}}">Login</a> </li>
   {% endif %}
