add searching on all list templates, add button and logic to assign and dissasign cook to dish, add searching.html and assign.html

--- a/templates/includes/sidebar.html
+++ b/templates/includes/sidebar.html
@@ -8,7 +8,11 @@
       </form>
     </li>
   {% else %}
-    <li class="list-group-item"><a href="{% url 'login'%}?next={{request.path}}">Login</a> </li>
+    {% if next %}
+      <li class="list-group-item"><a href="{% url 'login' %}?next={{ next }}">Login</a> </li>
+    {% else %}
+      <li class="list-group-item"><a href="{% url 'login' %}">Login</a> </li>
+    {% endif %}
   {% endif %}
   <br>
 
