--- a/templates/base.html
+++ b/templates/base.html
@@ -22,6 +22,10 @@
       {% block sidebar %}
         {% include "includes/sidebar.html" %}
       {% endblock %}
+
+      {% block searching %}
+        {% include "includes/searching.html" %}
+      {% endblock %}
       
     </div>
     <div class="col-sm-10">
