--- a/templates/kitchen/dish_detail.html
+++ b/templates/kitchen/dish_detail.html
@@ -1,9 +1,11 @@
 {% extends "base.html" %}
 
 <body>
+
   {% block content %}
     <h3>Detail information about {{ dish.name }}</h3>
   <h5><strong>Dish type:</strong> {{ dish.dish_type }}
+      {% include "includes/assign.html" %}
       <a href="{% url 'kitchen:dish-delete' pk=dish.id %}" class="btn btn-danger link-to-page float-right">
         Delete
       </a>
