--- a/templates/kitchen/ingredient_list.html
+++ b/templates/kitchen/ingredient_list.html
@@ -7,6 +7,7 @@
       List of all ingredients
       <a href="{% url 'kitchen:ingredient-create' %}" class="btn btn-primary link-to-page float-right">Add</a>
     </h2>
+    {% include "includes/searching.html" %}
     {% if ingredient_list %}
       {% for ingredient in ingredient_list %}
         <ul>
