--- a/static/assets/css/soft-design-system.css
+++ b/static/assets/css/soft-design-system.css
@@ -14104,4 +14104,7 @@ pre[class*="language-"] {
 .token.entity {
   cursor: help; }
 
+.nav_pad {
+  padding-bottom: 5%; }
+
 /*# sourceMappingURL=soft-design-system.css.map */
