--- a/templates/kitchen/index.html
+++ b/templates/kitchen/index.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+
 {% load static %}
 
 {% block title %} Material Kit 2 by Creative Tim {% endblock title %}
@@ -6,7 +7,6 @@
 {% block body %} class="index-page bg-gray-200" {% endblock body %}
 
 {% block content %}
-
 <header class="header-2">
   <div class="page-header min-vh-75 relative" style="background-image: url('{% static 'img/curved-images/curved.jpg' %}')">
     <div class="container">
@@ -15,7 +15,7 @@
           <h1 class="text-white pt-3 mt-n5">
             Restaurant kitchen service
           </h1>
-          <p class="lead text-white mt-3">First portfolio project of Vladyslav Bazhyn.</p>
+          <p class="lead text-white mt-3">First portfolio project.</p>
         </div>
       </div>
     </div>
@@ -46,25 +46,25 @@
         <div class="row">
           <div class="col-md-4 position-relative">
             <div class="p-3 text-center">
-              <h1 class="text-gradient text-primary"><span id="state1" countTo="70">0</span>+</h1>
-              <h5 class="mt-3">All cooks</h5>
+              <h1 class="text-gradient text-primary"><span id="state1">{{ num_cooks }}</span>+</h1>
+              <h5 class="mt-3">Cooks</h5>
               <p class="text-sm">The very best workers of ours</p>
             </div>
             <hr class="vertical dark">
           </div>
           <div class="col-md-4 position-relative">
             <div class="p-3 text-center">
-              <h1 class="text-gradient text-primary"> <span id="state2" countTo="15">0</span>+</h1>
-              <h5 class="mt-3">Design Blocks</h5>
-              <p class="text-sm">Mix the sections, change the colors and unleash your creativity</p>
+              <h1 class="text-gradient text-primary"> <span id="state2">{{ num_dishes }}</span>+</h1>
+              <h5 class="mt-3">Dishes</h5>
+              <p class="text-sm">All dishes we can create</p>
             </div>
             <hr class="vertical dark">
           </div>
           <div class="col-md-4">
             <div class="p-3 text-center">
-              <h1 class="text-gradient text-primary" id="state3" countTo="4">0</h1>
-              <h5 class="mt-3">Pages</h5>
-              <p class="text-sm">Save 3-4 weeks of work when you use our pre-made pages for your website</p>
+              <h1 class="text-gradient text-primary"> <span id="state3">{{ num_dish_type }}</span>+</h1>
+              <h5 class="mt-3">Dish type</h5>
+              <p class="text-sm">All types of dishes on our kitchen</p>
             </div>
           </div>
         </div>
