--- a/templates/includes/navigation.html
+++ b/templates/includes/navigation.html
@@ -1,9 +1,9 @@
-  <div class="container position-sticky z-index-sticky top-0">
-    <div class="row">
-      <div class="col-12">
+  <nav class="container position-sticky z-index-sticky top-0">
+    <nav class="row">
+      <nav class="col-12">
         <nav class="navbar navbar-expand-lg  blur blur-rounded top-0 z-index-fixed shadow position-absolute my-3 py-2 start-0 end-0 mx-4">
           <div class="container-fluid">
-            <a class="navbar-brand font-weight-bolder ms-sm-3" 
+            <a class="navbar-brand font-weight-bolder ms-sm-3"
                href="/" rel="tooltip" title="All logic created by Vladyslav Bazhyn" data-placement="bottom">
               Restaurant kitchen service
             </a>
@@ -213,8 +213,7 @@
               </div>
             </div>
           </div>
-        </div>
-      </div>
-    </div>
-  </div>
-  
+        </nav>
+      </nav>
+    </nav>
+  </nav>
