Change visual performance of dish-type-list page

--- a/templates/kitchen/dish_list.html
+++ b/templates/kitchen/dish_list.html
@@ -23,7 +23,7 @@
                   <div class="row">
                     <div class="col-12 mx-auto">
                       <div class="form-check form-switch ps-0">
-                        <ul class="border-radius-xl mx-auto py-3 blur shadow-blur nav">
+                        <ul class="border-radius-xl mx-auto py-3 blur shadow-blur nav d-flex justify-content-center">
                           <li class="nav-item">
                             <a href="{% url 'kitchen:dish-detail' pk=dish.id%}" target="_blank">
                               <p class="d-inline text-sm z-index-1 font-weight-bold" data-bs-toggle="tooltip" data-bs-placement="bottom" title="{{ dish.id }}">{{ dish.name }}</p>
