--- a/templates/kitchen/dish_type_list.html
+++ b/templates/kitchen/dish_type_list.html
@@ -1,26 +1,46 @@
 {% extends "base.html" %}
-<!--Pagination?-->
-<!--Name of dish_type_list it is in video-->
-<body>
-  {% block content %}
-    <h2>
-      List of all dish types
-      <a href="{% url 'kitchen:dish-type-create' %}" class="btn btn-primary link-to-page float-right">Add</a>
-    </h2>
-    {% include "includes/searching.html" %}
-    {% if dish_type_list %}
-      {% for dish_type in dish_type_list %}
-        <ul>
-          <li>
-            ({{ dish_type.id }})
-            <a href="{% url 'kitchen:dish-type-detail' pk=dish_type.id %}">
-              {{ dish_type.name }}
-            </a>
-          </li>
-        </ul>
-      {% endfor %}
-    {% else %}
-      <p>Now we don't have any dish types on our kitchen</p>
-    {% endif %}
-  {% endblock %}
-</body>
+{% load static %}
+
+{% block content %}
+  <div class="row mt-3">
+    <div class="col-12">
+      <div class="position-relative border-radius-xl overflow-hidden shadow-lg mb-7">
+        <div class="container border-bottom">
+          <div class="row justify-space-between py-2">
+            <section class="pt-3 pb-4 text-center" id="count-stats">
+              <h2>
+                List of all dish types
+              </h2>
+            </section>
+
+            <a href="{% url 'kitchen:dish-type-create' %}" class="btn btn-primary link-to-page float-right">Add</a>
+
+            {% include "includes/searching.html" %}
+
+            {% if dish_type_list %}
+              {% for dish_type in dish_type_list %}
+                <div class="container py-3 mt-3">
+                  <div class="row">
+                    <div class="col-12 mx-auto">
+                      <div class="form-check form-switch ps-0">
+                        <ul class="border-radius-xl mx-auto py-3 blur shadow-blur nav d-flex justify-content-center">
+                          <li class="nav-item">
+                            <a href="{% url 'kitchen:dish-type-detail' pk=dish_type.id %}">
+                              <p class="d-inline text-sm z-index-1 font-weight-bold" style="text-align: center;" data-bs-toggle="tooltip" data-bs-placement="bottom" title="{{ dish_type.id }}">{{ dish_type.name }}</p>
+                            </a>
+                          </li>
+                        </ul>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              {% endfor %}
+            {% else %}
+              <p>Now we don't have any dish types on our kitchen</p>
+            {% endif %}
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+{% endblock %}
