--- a/templates/includes/searching.html
+++ b/templates/includes/searching.html
@@ -5,7 +5,7 @@
   <div class="col-4 mx-auto">
     <div class="input-group mb-4">
       <form action="" method="get" class="form-inline input-group-text">
-        {{ search_form.as_p }}
+        {{ search_form|crispy }}
         <input type="submit" value="🔎" class="btn btn-info">
       </form>
     </div>
